--- a/index.html
+++ b/index.html
@@ -719,8 +719,7 @@ select.form-control:not([size]):not([multiple]) {
                               </div>
                               <div class="timeline-content">
                                  <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc faucibus turpis quis tincidunt luctus.
-                                    Nam sagittis dui in nunc consequat, in imperdiet nunc sagittis.
+                                    достану для тебя звезду с неба малыш
                                  </p>
                               </div>
                               <div class="timeline-likes">
@@ -811,10 +810,12 @@ select.form-control:not([size]):not([multiple]) {
                                  <span class="pull-right text-muted">1,282 Views</span>
                               </div>
                               <div class="timeline-content">
-                                 <p class="lead">
-                                    <i class="fa fa-quote-left fa-fw pull-left"></i>
-                                    Quisque sed varius nisl. Nulla facilisi. Phasellus consequat sapien sit amet nibh molestie placerat. Donec nulla quam, ullamcorper ut velit vitae, lobortis condimentum magna. Suspendisse mollis in sem vel mollis.
-                                    <i class="fa fa-quote-right fa-fw pull-right"></i>
+                                  <i class="fa fa-map-marker text-danger fa-fw"></i>
+                                   	Россия, Алтайский край, г.Алейск
+                                 </h4>
+                                 <p>ТАКАЯ СУКА Я:3</p>
+                                 <p class="m-t-20">
+                                    <img src="photo/danone(7).jpg" alt="HAPPY BRITHDAY!!!" width="400" height="300">
                                  </p>
                               </div>
                               <div class="timeline-footer">
@@ -851,7 +852,7 @@ select.form-control:not([size]):not([multiple]) {
                                  </h4>
                                  <p>С днем рождения меня мои сладкие!:3</p>
                                  <p class="m-t-20">
-                                    <img src="photo/danone(6).jpg" alt="HAPPY BRITHDAY!!!" width="400" height="300">
+                                    <img src="photo/danone(7).jpg" alt="BITCH!!!" width="400" height="300">
                                  </p>
                               </div>
                               <div class="timeline-footer">
