--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@ select.form-control:not([size]):not([multiple]) {
                               </div>
                               <div class="timeline-content">
                                  <p>
-                                    достану для тебя звезду с неба малыш
+                                    достану для тебя звезду с неба малыш!
                                  </p>
                               </div>
                               <div class="timeline-likes">
@@ -780,7 +780,7 @@ select.form-control:not([size]):not([multiple]) {
                                  <span class="pull-right text-muted">82 Views</span>
                               </div>
                               <div class="timeline-content">
-                                 <p>Местонахождение: дыра</p>
+                                 <p>Меня сережа всегда обижает(</p>
                               </div>
                               <div class="timeline-footer">
                                  <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-thumbs-up fa-fw fa-lg m-r-3"></i> Like</a>
@@ -805,17 +805,20 @@ select.form-control:not([size]):not([multiple]) {
                            <!-- begin timeline-body -->
                            <div class="timeline-body">
                               <div class="timeline-header">
-                                 <span class="userimage"><img src="photo/danone.jpg" alt=""></span>
-                                 <span class="username">Данил Черчеленко</span>
-                                 <span class="pull-right text-muted">1,282 Views</span>
-                              </div>
-                              <div class="timeline-content">
-                                  <i class="fa fa-map-marker text-danger fa-fw"></i>
+                                 <h4 class="template-title">
+                                    <i class="fa fa-map-marker text-danger fa-fw"></i>
                                    	Россия, Алтайский край, г.Алейск
                                  </h4>
-                                 <p>ТАКАЯ СУКА Я:3</p>
+                                 <p>ТАКАЯ Я СУКА</p>
                                  <p class="m-t-20">
-                                    <img src="photo/danone(7).jpg" alt="HAPPY BRITHDAY!!!" width="400" height="300">
+                                    <img src="photo/danone(7).jpg" alt="BITCH!!!" width="400" height="300">
+                                 </p>
+                              </div>
+                              <div class="timeline-content">
+                                 <p class="lead">
+                                    <i class="fa fa-quote-left fa-fw pull-left"></i>
+                                    Quisque sed varius nisl. Nulla facilisi. Phasellus consequat sapien sit amet nibh molestie placerat. Donec nulla quam, ullamcorper ut velit vitae, lobortis condimentum magna. Suspendisse mollis in sem vel mollis.
+                                    <i class="fa fa-quote-right fa-fw pull-right"></i>
                                  </p>
                               </div>
                               <div class="timeline-footer">
@@ -852,7 +855,7 @@ select.form-control:not([size]):not([multiple]) {
                                  </h4>
                                  <p>С днем рождения меня мои сладкие!:3</p>
                                  <p class="m-t-20">
-                                    <img src="photo/danone(7).jpg" alt="BITCH!!!" width="400" height="300">
+                                    <img src="photo/danone(6).jpg" alt="HAPPY BRITHDAY!!!" width="400" height="300">
                                  </p>
                               </div>
                               <div class="timeline-footer">
