--- a/index.html
+++ b/index.html
@@ -865,8 +865,12 @@ select.form-control:not([size]):not([multiple]) {
                            </div>
                            <!-- end timeline-icon -->
                            <!-- begin timeline-body -->
-                           <div class="timeline-body">
+                           <div class="timeline-body"><div class="timeline-body">
                               <div class="timeline-header">
+                                 <span class="userimage"><img src="photo/danone.jpg" alt=""></span>
+                                 <span class="username">Данил Черчеленко</span>
+                                 <span class="pull-right text-muted">52M Views</span>
+                              </div>
                                  <h4 class="template-title">
                                     <i class="fa fa-map-marker text-danger fa-fw"></i>
                                    	Россия, Алтайский край, г.Алейск
