--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@ select.form-control:not([size]):not([multiple]) {
                            <!-- begin timeline-time -->
                            <div class="timeline-time">
                               <span class="date">24 Февраля 2024</span>
-                              <span class="time">08:17</span>
+                              <span class="time">08:43</span>
                            </div>
                            <!-- end timeline-time -->
                            <!-- begin timeline-icon -->
@@ -865,22 +865,21 @@ select.form-control:not([size]):not([multiple]) {
                            </div>
                            <!-- end timeline-icon -->
                            <!-- begin timeline-body -->
-                           <div class="timeline-body"><div class="timeline-body">
+                           <div class="timeline-body">
                               <div class="timeline-header">
                                  <span class="userimage"><img src="photo/danone.jpg" alt=""></span>
                                  <span class="username">Данил Черчеленко</span>
                                  <span class="pull-right text-muted">52M Views</span>
                               </div>
+                              <div class="timeline-content">
                                  <h4 class="template-title">
                                     <i class="fa fa-map-marker text-danger fa-fw"></i>
                                    	Россия, Алтайский край, г.Алейск
                                  </h4>
-                                 <p>ТАКАЯ Я СУКА</p>
+                                 <p>ТАКАЯ Я СУКА!!</p>
                                  <p class="m-t-20">
                                     <img src="photo/danone(7).jpg" alt="BITCH!!!" width="400" height="300">
                                  </p>
-                              </div>
-                              <div class="timeline-content">
                               </div>
                               <div class="timeline-footer">
                                  <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-thumbs-up fa-fw fa-lg m-r-3"></i> Like</a>
