--- a/photo/photos.html
+++ b/photo/photos.html
@@ -354,6 +354,12 @@ body .fc-widget-header a {
                             <li>
                                 <a href="#"><img src="danone(6).jpg" alt="" /></a>
                             </li>
+			    <li>
+                                <a href="#"><img src="danone(7).jpg" alt="" /></a>
+                            </li>
+			    <li>
+                                <a href="#"><img src="danone(8).jpg" alt="" /></a>
+                            </li>
                         </ul>
                     </div>                    
                 </div>
