--- a/photo/photos.html
+++ b/photo/photos.html
@@ -334,7 +334,7 @@ body .fc-widget-header a {
             <div class="col-md-8">
                 <div class="tab-content p-0">
                     <div class="tab-pane active show" id="profile-photos">
-                        <div class="m-b-10"><b>Фотографии(6)</b></div>
+                        <div class="m-b-10"><b>Фотографии(7)</b></div>
                         <ul class="img-grid-list">
                             <li>
                                 <a href="#"><img src="danone(2).jpg" alt="" class="img-portrait"/></a>
@@ -346,19 +346,19 @@ body .fc-widget-header a {
                                 <a href="#"><img src="danone.jpg" alt="" class="img-portrait" /></a>
                             </li>
                             <li>
-                                <a href="#"><img src="danone(5).jpg" alt="" /></a>
+                                <a href="#"><img src="danone(5).jpg" alt="" class="img-portrait" /></a>
                             </li>
                             <li>
                                 <a href="#"><img src="danone(4).jpg" alt="" class="img-portrait" /></a>
                             </li>
                             <li>
-                                <a href="#"><img src="danone(6).jpg" alt="" /></a>
+                                <a href="#"><img src="danone(6).jpg" alt="" class="img-portrait" /></a>
                             </li>
 			    <li>
-                                <a href="#"><img src="danone(7).jpg" alt="" /></a>
+                                <a href="#"><img src="danone(7).jpg" alt="" class="img-portrait" /></a>
                             </li>
 			    <li>
-                                <a href="#"><img src="danone(8).jpg" alt="" /></a>
+                                <a href="#"><img src="danone(8).jpg" alt="" class="img-portrait" /></a>
                             </li>
                         </ul>
                     </div>                    
