--- a/photo/photos.html
+++ b/photo/photos.html
@@ -360,6 +360,9 @@ body .fc-widget-header a {
 			    <li>
                                 <a href="#"><img src="danone(8).jpg" alt="" class="img-portrait" /></a>
                             </li>
+			    <li>
+                                <a href="#"><img src="danone(10).jpg" alt="" class="img-portrait" /></a>
+                            </li>
                         </ul>
                     </div>                    
                 </div>
