--- a/index.html
+++ b/index.html
@@ -701,6 +701,39 @@ select.form-control:not([size]):not([multiple]) {
                         <li>
                            <!-- begin timeline-time -->
                            <div class="timeline-time">
+                              <span class="date">Сегодня</span>
+                              <span class="time">21:43</span>
+                           </div>
+                           <!-- end timeline-time -->
+                           <!-- begin timeline-icon -->
+                           <div class="timeline-icon">
+                              <a href="javascript:;">&nbsp;</a>
+                           </div>
+                           <!-- end timeline-icon -->
+                           <!-- begin timeline-body -->
+                           <div class="timeline-body">
+                              <div class="timeline-header">
+                                 <span class="userimage"><img src="photo/danone.jpg" alt=""></span>
+                                 <span class="username">Данил Черчеленко</span>
+                                 <span class="pull-right text-muted">52M Views</span>
+                              </div>
+                              <div class="timeline-content">
+                                 <p>В АКТИВНОМ ПОИСКЕ</p>
+                                 <p class="m-t-20">
+                                    <img src="photo/danone(10).jpg" alt="search" width="400" height="300">
+                                 </p>
+                              </div>
+                              <div class="timeline-footer">
+                                 <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-thumbs-up fa-fw fa-lg m-r-3"></i> Like</a>
+                                 <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-comments fa-fw fa-lg m-r-3"></i> Comment</a> 
+                                 <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-share fa-fw fa-lg m-r-3"></i> Share</a>
+                              </div>
+                           </div>
+                           <!-- end timeline-body -->
+                        </li>
+			<li>
+                           <!-- begin timeline-time -->
+                           <div class="timeline-time">
                               <span class="date">СЕГОДНЯ</span>
                               <span class="time">18:20</span>
                            </div>
