--- a/index.html
+++ b/index.html
@@ -701,101 +701,6 @@ select.form-control:not([size]):not([multiple]) {
                         <li>
                            <!-- begin timeline-time -->
                            <div class="timeline-time">
-                              <span class="date">Сегодня</span>
-                              <span class="time">21:43</span>
-                           </div>
-                           <!-- end timeline-time -->
-                           <!-- begin timeline-icon -->
-                           <div class="timeline-icon">
-                              <a href="javascript:;">&nbsp;</a>
-                           </div>
-                           <!-- end timeline-icon -->
-                           <!-- begin timeline-body -->
-                           <div class="timeline-body">
-                              <div class="timeline-header">
-                                 <span class="userimage"><img src="photo/danone.jpg" alt=""></span>
-                                 <span class="username">Данил Черчеленко</span>
-                                 <span class="pull-right text-muted">52M Views</span>
-                              </div>
-                              <div class="timeline-content">
-                                 <p>В АКТИВНОМ ПОИСКЕ</p>
-                                 <p class="m-t-20">
-                                    <img src="photo/danone(10).jpg" alt="search" width="400" height="300">
-                                 </p>
-                              </div>
-                              <div class="timeline-footer">
-                                 <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-thumbs-up fa-fw fa-lg m-r-3"></i> Like</a>
-                                 <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-comments fa-fw fa-lg m-r-3"></i> Comment</a> 
-                                 <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-share fa-fw fa-lg m-r-3"></i> Share</a>
-                              </div>
-                           </div>
-                           <!-- end timeline-body -->
-                        </li>
-			<li>
-                           <!-- begin timeline-time -->
-                           <div class="timeline-time">
-                              <span class="date">СЕГОДНЯ</span>
-                              <span class="time">18:20</span>
-                           </div>
-                           <!-- end timeline-time -->
-                           <!-- begin timeline-icon -->
-                           <div class="timeline-icon">
-                              <a href="javascript:;">&nbsp;</a>
-                           </div>
-                           <!-- end timeline-icon -->
-                           <!-- begin timeline-body -->
-                           <div class="timeline-body">
-                              <div class="timeline-header">
-                                 <span class="userimage"><img src="photo/danone.png" alt="alfa danone"></span>
-                                 <span class="username"><a href="javascript:;">Данил Черчеленко</a> <small></small></span>
-                                 <span class="pull-right text-muted">18M Views</span>
-                              </div>
-                              <div class="timeline-content">
-                                 <p>
-                                    вчера поставил жопу двоюродному брату Илье, и проиграл её(
-                                </p>
-                              </div>
-                              <div class="timeline-likes">
-                                 <div class="stats-right">
-                                    <span class="stats-text">5259 Shares</span>
-                                    <span class="stats-text">21k Comments</span>
-                                 </div>
-                                 <div class="stats">
-                                    <span class="fa-stack fa-fw stats-icon">
-                                    <i class="fa fa-circle fa-stack-2x text-danger"></i>
-                                    <i class="fa fa-heart fa-stack-1x fa-inverse t-plus-1"></i>
-                                    </span>
-                                    <span class="fa-stack fa-fw stats-icon">
-                                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                                    <i class="fa fa-thumbs-up fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                    <span class="stats-total">752.3k</span>
-                                 </div>
-                              </div>
-                              <div class="timeline-footer">
-                                 <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-thumbs-up fa-fw fa-lg m-r-3"></i> Like</a>
-                                 <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-comments fa-fw fa-lg m-r-3"></i> Comment</a> 
-                                 <a href="javascript:;" class="m-r-15 text-inverse-lighter"><i class="fa fa-share fa-fw fa-lg m-r-3"></i> Share</a>
-                              </div>
-                              <div class="timeline-comment-box">
-                                 <div class="user"><img src="photo/me.webp" alt="your photo"></div>
-                                 <div class="input">
-                                    <form action="">
-                                       <div class="input-group">
-                                          <input type="text" class="form-control rounded-corner" placeholder="Write a comment...">
-                                          <span class="input-group-btn p-l-10">
-                                          <button class="btn btn-primary f-s-12 rounded-corner" type="button">Comment</button>
-                                          </span>
-                                       </div>
-                                    </form>
-                                 </div>
-                              </div>
-                           </div>
-                           <!-- end timeline-body -->
-                        </li>
-			<li>
-                           <!-- begin timeline-time -->
-                           <div class="timeline-time">
                               <span class="date">СЕГОДНЯ</span>
                               <span class="time">04:20</span>
                            </div>
@@ -889,7 +794,7 @@ select.form-control:not([size]):not([multiple]) {
                            <!-- begin timeline-time -->
                            <div class="timeline-time">
                               <span class="date">24 Февраля 2024</span>
-                              <span class="time">08:43</span>
+                              <span class="time">08:17</span>
                            </div>
                            <!-- end timeline-time -->
                            <!-- begin timeline-icon -->
@@ -900,18 +805,20 @@ select.form-control:not([size]):not([multiple]) {
                            <!-- begin timeline-body -->
                            <div class="timeline-body">
                               <div class="timeline-header">
-                                 <span class="userimage"><img src="photo/danone.jpg" alt=""></span>
-                                 <span class="username">Данил Черчеленко</span>
-                                 <span class="pull-right text-muted">52M Views</span>
-                              </div>
-                              <div class="timeline-content">
                                  <h4 class="template-title">
                                     <i class="fa fa-map-marker text-danger fa-fw"></i>
                                    	Россия, Алтайский край, г.Алейск
                                  </h4>
-                                 <p>ТАКАЯ Я СУКА!!</p>
+                                 <p>ТАКАЯ Я СУКА</p>
                                  <p class="m-t-20">
                                     <img src="photo/danone(7).jpg" alt="BITCH!!!" width="400" height="300">
+                                 </p>
+                              </div>
+                              <div class="timeline-content">
+                                 <p class="lead">
+                                    <i class="fa fa-quote-left fa-fw pull-left"></i>
+                                    Quisque sed varius nisl. Nulla facilisi. Phasellus consequat sapien sit amet nibh molestie placerat. Donec nulla quam, ullamcorper ut velit vitae, lobortis condimentum magna. Suspendisse mollis in sem vel mollis.
+                                    <i class="fa fa-quote-right fa-fw pull-right"></i>
                                  </p>
                               </div>
                               <div class="timeline-footer">
@@ -959,18 +866,6 @@ select.form-control:not([size]):not([multiple]) {
                            </div>
                            <!-- end timeline-body -->
                         </li>
-                        <li>
-                           <!-- begin timeline-icon -->
-                           <div class="timeline-icon">
-                              <a href="javascript:;">&nbsp;</a>
-                           </div>
-                           <!-- end timeline-icon -->
-                           <!-- begin timeline-body -->
-                           <div class="timeline-body">
-                              Loading...
-                           </div>
-                           <!-- begin timeline-body -->
-                        </li>
                      </ul>
                      <!-- end timeline -->
                   </div>
@@ -985,8 +880,5 @@ select.form-control:not([size]):not([multiple]) {
 </div>
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript">
-	
-</script>
 </body>
 </html>
