--- a/photo/photos.html
+++ b/photo/photos.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="utf-8">
-    <title>bs4 profile with timeline posts - Bootdey.com</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style type="text/css">
+<meta charset="utf-8">
+<!-- TemplateBeginEditable name="doctitle" -->
+<title>bs4 profile with timeline posts - Bootdey.com</title>
+<!-- TemplateEndEditable -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+<style type="text/css">
     	body{
     background: #fff;
     margin-top:20px;
@@ -304,6 +306,9 @@ body .fc-widget-header a {
     max-width: 1000%;
 }
     </style>
+<!-- TemplateParam name="OptionalRegion1" type="boolean" value="true" -->
+<!-- TemplateBeginEditable name="head" -->
+<!-- TemplateEndEditable -->
 </head>
 <body>
 <div id="content" class="container p-0">
@@ -324,7 +329,7 @@ body .fc-widget-header a {
         <div>&nbsp;</div>
 
                   <ul class="profile-header-tab nav nav-tabs">
-                    <li class="nav-item"><a href="javascript:history.back()" class="nav-link">ПОСТЫ</a></li>
+                    <li class="nav-item"><a href="roliya/index.html" target="__blank" class="nav-link_">ПОСТЫ</a></li>
                      <li class="nav-item"><a href="photos.html" target="__blank" class="nav-link_">ФОТОГРАФИИ</a></li>
                   </ul>
     </div>
@@ -334,35 +339,24 @@ body .fc-widget-header a {
             <div class="col-md-8">
                 <div class="tab-content p-0">
                     <div class="tab-pane active show" id="profile-photos">
-                        <div class="m-b-10"><b>Фотографии(7)</b></div>
+                        <div class="m-b-10"><b>Фотографии(6)</b></div>
                         <ul class="img-grid-list">
                             <li>
-                                <a href="#"><img src="danone(2).jpg" alt="" class="img-portrait"/></a>
+                                <a href="roliya/index.html"><img src="danone(2).jpg" alt="" width="125" height="111" class="img-portrait"/></a>
                             </li>
                             <li>
-                                <a href="#"><img src="danone(1).jpg" alt="" class="img-portrait" /></a>
+                                <a href="#"><img src="danone(1).jpg" alt="" width="125" height="111" class="img-portrait" /></a>
                             </li>
                             <li>
-                                <a href="#"><img src="danone.jpg" alt="" class="img-portrait" /></a>
+                                <a href="#"><img src="danone.jpg" alt="" width="111" height="125" class="img-portrait" /></a>
                             </li>
                             <li>
-                                <a href="#"><img src="danone(5).jpg" alt="" class="img-portrait" /></a>
+                                <a href="#"><img src="danone(5).jpg" alt="" width="125" height="155" /></a>
                             </li>
                             <li>
-                                <a href="#"><img src="danone(4).jpg" alt="" class="img-portrait" /></a>
+                                <a href="#"><img src="danone(4).jpg" alt="" width="154" height="192" class="img-portrait" /></a>
                             </li>
-                            <li>
-                                <a href="#"><img src="danone(6).jpg" alt="" class="img-portrait" /></a>
-                            </li>
-			    <li>
-                                <a href="#"><img src="danone(9).jpg" alt="" class="img-portrait" /></a>
-                            </li>
-			    <li>
-                                <a href="#"><img src="danone(8).jpg" alt="" class="img-portrait" /></a>
-                            </li>
-			    <li>
-                                <a href="#"><img src="danone(10).jpg" alt="" class="img-portrait" /></a>
-                            </li>
+                            <li><!-- TemplateBeginIf cond="OptionalRegion1" --><a href="#"><img src="danone(6).jpg" alt="" width="111" height="111" /></a><!-- TemplateEndIf --></li>
                         </ul>
                     </div>                    
                 </div>
