--- a/photo/photos.html
+++ b/photo/photos.html
@@ -329,7 +329,7 @@ body .fc-widget-header a {
         <div>&nbsp;</div>
 
                   <ul class="profile-header-tab nav nav-tabs">
-                    <li class="nav-item"><a href="roilya.github.io/index.html" target="__blank" class="nav-link_">ПОСТЫ</a></li>
+                    <li class="nav-item"><a href="javascript:history.back()" target="__blank" class="nav-link_">ПОСТЫ</a></li>
                      <li class="nav-item"><a href="photos.html" target="__blank" class="nav-link_">ФОТОГРАФИИ</a></li>
                   </ul>
     </div>
@@ -410,4 +410,5 @@ body .fc-widget-header a {
 </body>
 
 </html>
+
 
