--- a/photo/photos.html
+++ b/photo/photos.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- TemplateBeginEditable name="doctitle" -->
-<title>bs4 profile with timeline posts - Bootdey.com</title>
+<title>roilya.photos.com</title>
 <!-- TemplateEndEditable -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -410,5 +410,6 @@ body .fc-widget-header a {
 </body>
 
 </html>
+
 
 
